# cpp_awesome

./: CMakeLists.txt  Dockerfile  Dockerfile.gpu  LICENSE  README.md  main.cpp  run.sh
include/core/: baseobj.h  baseobj.hpp
include/template_designPt/: singleton.h
part3rd/: README.md
src/core/: baseobj.cpp
src/template_designPt/: singleton.cpp
templates/algorithm_file/basestruct/: hashtable.cpp  hashtable.h  listnode.cpp  listnode.h
templates/algorithm_file/operator/: greedy_opt.cpp  greedy_opt.h  hashstr_opt.cpp  hashstr_opt.h  listnode_opt.cpp  listnode_opt.h
templates/algorithm_file/test_demo/: CMakeLists.txt  demo.cpp  run.sh
templates/apue_file/code/chapter_01/: run.sh  unix_basic  unix_basic.c  unix_basic.h
templates/apue_file/code/chapter_01/apue.3e/advio/: deadlock  mandatory  mcopy2  nonblockw  rot13a  rot13c2
templates/apue_file/code/chapter_01/apue.3e/datafiles/: strftime
templates/apue_file/code/chapter_01/apue.3e/db/: libapue_db.so.1  t4
templates/apue_file/code/chapter_01/apue.3e/environ/: doatexit  echoarg  getrlimit  hello1  testjmp
templates/apue_file/code/chapter_03/: file_IO  file_IO.c  file_IO.h  run.sh  temp.foo
templates/apue_file/code/chapter_04/: 2q  chapter03  file_dir  file_dir.c  file_dir.h  run.sh
templates/apue_file/code/chapter_05/: run.sh  std_iolib  std_iolib.c  std_iolib.h
templates/apue_file/code/chapter_06/: run.sh  sys_datainfo  sys_datainfo.c  sys_datainfo.h
templates/apue_file/code/chapter_07/: process_env  process_env.c  process_env.h  process_env_O  run.sh
templates/apue_file/code/chapter_08/: process_ctrl.c  process_ctrl.h  run.sh
templates/apue_file/md_file/: chapter01_unix_basic.md
templates/stl_file/: main.cpp  ptr_check.cpp  ptr_check.h  run.sh
tests/: test  test.b  test.cpp
tests/run_scripts/: run_test.sh
(+111 files in other folders)
